# vulcanoes-dashbord

./: .dockerignore  .env  .env.example  .replit  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  __init__.py  advanced_strain_utils.py  alerts.py  analytics.py  animation_utils.py  api.py  app.py  cinematic_animation.py  comet_utils.py  complete_eruption_animation.py  crusde_utils.py  crustal_models_utils.py  crustal_strain_utils.py  db_utils.py  deploy.sh  docker-compose.yml  embed_example_next.js  embed_reference.html  functions_to_add.py  gas_monitoring.py  geojson_strain_utils.py  insar_data.py  magma_chamber_viz.py  map_utils.py  payment_utils.py  pyproject.toml  replit.nix  risk_assessment.py  send_message.py  setup-production.sh  sound_utils.py  start.sh  temp_volcanic_cloud_tracker.py  (+5 more)
assets/: custom.css
assets/images/: anak_krakatau_after.txt  anak_krakatau_before.txt
