[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.5",
    "streamlit-folium>=0.24.0",
    "streamlit>=1.44.1",
    "pandas>=2.2.3",
    "trafilatura>=2.0.0",
    "sqlalchemy>=2.0.40",
    "psycopg2-binary>=2.9.10",
    "librosa>=0.11.0",
    "pydub>=0.25.1",
    "soundfile>=0.13.1",
    "matplotlib>=3.10.1",
    "requests>=2.32.3",
    "plotly>=6.0.1",
    "twilio>=9.5.2",
    "anthropic>=0.49.0",
    "numpy>=2.2.4",
    "pymupdf>=1.25.5",
    "pypdf2>=3.0.1",
    "xlrd>=2.0.1",
    "openpyxl>=3.1.5",
    "cfgrib>=0.9.15.0",
    "eccodes>=2.41.0",
    "xarray>=2025.3.1",
    "scipy>=1.15.2",
]
